# persistence-test

./: .copier-answers.yml  README.md  model.py  pyproject.toml  validate-baskerville.sh  validate_config.yml
src/persistence_test/: hello.py
